Updates stylesheets to use classes instead of ids for styling components.

--- a/app/public/styles/modules.css
+++ b/app/public/styles/modules.css
@@ -114,16 +114,7 @@ select:hover{
   padding:3%;
 }
 
-.datacontainer {
-  overflow:hidden;
-}
-
-#state-choice,
-#county-filter,
-#city-choice,
-#destination-state-choice,
-#destination-county-filter,
-#destination-city-choice,
+.dropdowns,
 #current-income {
   display: block;
   margin: 0 auto 2%;
@@ -153,20 +144,22 @@ select:hover{
   box-shadow: inset 0 0 5px 1px #add8e6;
 }
 
-#current-side,
-#destination-side {
+.current-side,
+.destination-side {
   box-sizing: border-box;
   text-align: center;
   padding: 3%;
   position: relative;
 }
 
-#current-city-input,
-#destination-city-input {
+.city-input {
   padding-bottom: 5%;
+  text-align: center;
+  box-sizing: border-box;
+  position: relative;
 }
 
-#current-side {
+.current-side {
   background-color: #e9e9e9;
 }
 
@@ -190,6 +183,7 @@ select:hover{
   outline: none;
 }
 
+#comparison-boxes,
 #county-econ,
 #mortgage-data,
 #rental-data,
@@ -282,16 +276,17 @@ select:hover{
 
   .datacontainer {
     display: flex;
+    overflow: hidden;
   }
 
-  #current-side {
+  .current-side {
     align-items: stretch;
     flex: 1;
     width: 50%;
     float: left;
   }
 
-  #destination-side {
+  .destination-side {
     float: right;
     width:50%;
   }
@@ -338,9 +333,6 @@ select:hover{
     padding: 15%;
   }
 
-
-
-
   .home_column {
     width:29.33%;
     padding:2%;
@@ -384,8 +376,6 @@ select:hover{
     width: 40vw;
     float: left;
   }
-
-
 
 }
 
